--- a/contact.html
+++ b/contact.html
@@ -18,8 +18,29 @@
 <body>
     <!-- Navigation Bar -->
     <nav class="navbar">
-        
+        <div class="nav-container">
+            <div class="logo">
+                <img src="images/logo-skull.png" alt="Skull logo" class="logo-img">
+                <h1>Spooky Store</h1>
+            </div>
+            <ul class="nav-menu">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="products.html">Products</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html" class="active">Contact</a></li>
+            </ul>
+        </div>
     </nav>
+
+    <!-- Footer Section --> 
+    <footer class="footer">
+        <div class="footer-content">
+            <img src="images/footer-tree1.png" alt="First Footer Tree" class="footer-tree">
+            <p>&copy; 2025 Spooky Halloween Store. All rights reserved.</p>
+            <p>Happy Halloween! &#127875;</p>
+            <img src="images/footer-tree2.png" alt="Second Footer Tree" class="footer-tree">
+        </div>
+    </footer>
 
 </body>
 </html>
