--- a/index.html
+++ b/index.html
@@ -34,23 +34,62 @@
 
     <!-- Floating Halloween Icons -->
     <div class="floating-icons">
-
+        <img src="images/nav-bat.png" alt="Floating Bat icon" class="float-icon bat">
+        <img src="images/stars.png" alt="Floating star icon" class="float-icon stars">
     </div>
 
     <!-- Hero Section -->
-    <section>
-
+    <section class="hero">
+        <div class="hero-content">
+            <h2 class="spooky-title">Welcome to the Spookiest Store!</h2>
+            <p class="hero-text">Get ready for a frightfully fun Halloween with our amazing collection of spooky items!</p>
+            <button class="cta-button" id="heroButton">Explore Now</button>
+        </div>
+        <div class="hero-images">
+            <img src="images/home-pumpkin.png" alt="Pumpkin" class="hero-img">
+            <img src="images/home-tree1.png" alt="Spooky tree" class="hero-tree">
+        </div>
     </section>
 
     <!-- Main Content -->
     <main>
         <!-- Featured Items Section -->
+        <section class="featured">
+            <h2 class="section-title">Featured Halloween Items</h2>
+            <div class="featured-grid">
+                <div class="featured-card">
+                    <img src="images/item-witch-hat.png" alt="Witch hat">
+                    <h3>Witch Hat</h3>
+                    <p>Perfect for your Halloween costume!</p>
+                </div>
+                <div class="featured-card">
+                    <img src="images/item-pumpkin.png" alt="pumpkin">
+                    <h3>Jack-O-Lantern</h3>
+                    <p>Light up your spooky night!</p>
+                </div>
+                <div class="featured-card">
+                    <img src="images/item-spider.png" alt="Spider">
+                    <h3>Creepy Spider</h3>
+                    <p>Add some creepiness to your decore!</p>
+                </div>
+                <div class="featured-card">
+                    <img src="images/item-broom.png" alt="Broom">
+                    <h3>Witch's Broom</h3>
+                    <p>Fly away on Halloween night!</p>
+                </div>
+            </div>
+        </section>
     </main>
         
 
     <!-- Footer Section --> 
-    <footer>
-
+    <footer class="footer">
+        <div class="footer-content">
+            <img src="images/footer-tree1.png" alt="First Footer Tree" class="footer-tree">
+            <p>&copy; 2025 Spooky Halloween Store. All rights reserved.</p>
+            <p>Happy Halloween! &#127875;</p>
+            <img src="images/footer-tree2.png" alt="Second Footer Tree" class="footer-tree">
+        </div>
     </footer>
 </body>
 </html>
